--- a/src/app/components/book-mark/book-mark.component.css
+++ b/src/app/components/book-mark/book-mark.component.css
@@ -1,6 +1,3 @@
-/* body{
-    background-color: #0c2233;
-} */
 
 *{
   margin:0
@@ -23,7 +20,7 @@
     justify-content: center;
     align-items: center;
     min-height: 50rem;
-
+    margin: auto;
 }
 
 img{
